kubernetes/apps/kube-system/cilium/app/networks.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: k8s.idahobealefamily.com
    lbipam.cilium.io/ips: 192.168.20.59
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - port: 6443
