kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Hubble
    gethomepage.dev/group: Monitoring
    gethomepage.dev/description: "Network Observability with Hubble"
    gethomepage.dev/icon: sh-cilium-hubble

spec:
  hostnames:
    - "hubble.idahobealefamily.com"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: hubble
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
